--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^19.0.2",
+    "ngx-toastr": "^19.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
